# quantum-music

./: README.md  strudel.json
q-midi/: CMakeLists.txt  README.md  qmidi.c  qmidi.uf2
q-midi/lib/qsim/: CMakeLists.txt  measure.c  measure.h  qsim.c  qsim.h  simulate.c  simulate.h
qubitcrusher/: README.md  main.c  manifest.json  project.mk  qubitcrusher.ntkdigunit
samples/: README.md
